@@ -17,6 +17,7 @@ x AVC: FPS were sometimes 2x the reality
 x RealMedia parser was brocken
 x FLV parser was crashing
 x FLV: Better detection of Nellymoser audio
+x FLV: Disabling Framerate estimation if a VFR file is detected (estimation was false in this case)
 x Better false-positive MP3 detection (NSV files are no more detected as MP3)
 
 Version 0.7.5.8, 2008-02-01
